# russian-tts-studio

./: .gitignore  Makefile  README.md  launcher.py  pyproject.toml  requirements-minimal.txt  requirements.txt  start.sh
output/reference/: female_voice_1.json  male_voice_1.json  sasha.json
russian_tts_studio/: __init__.py
russian_tts_studio/integrations/: __init__.py  comfyui.py
russian_tts_studio/models/: __init__.py  base_synth.py  silero_synth.py  voxcpm_synth.py  xtts_synth.py
russian_tts_studio/pipeline/: __init__.py  tts_pipeline.py
russian_tts_studio/utils/: __init__.py  audio_utils.py  metrics.py  prosody.py  text_utils.py
scripts/comparison/: __init__.py  base.py  compare_engines.py  silero_engine.py  voxcpm_engine.py  xtts_engine.py
scripts/inference/: generate_test_reference.py  run_pipeline.py
scripts/integration/: comfyui_bridge.py
scripts/postprocess/: process.py
tests/: test_pipeline.py
web/: __init__.py  app.py  desktop.py  run.py  start.py
web/api/: __init__.py
web/static/: app.js  engines.css  styles.css
web/templates/: index.html
