[project]
name = "russian-tts-studio"
version = "0.1.0"
description = "Production TTS pipeline for Russian: XTTS-v2 + Silero fallback + ComfyUI integration"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Russian TTS Studio" },
]

[tool.setuptools.packages.find]
include = ["russian_tts_studio*"]
exclude = ["tests*", "scripts*", "output*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501"]
